--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/EcellLogo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.jpg" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="moq_mQuLzWS8EQ6TUooMzyZTaZBes8W2H71lMnfy-_A" />
     <title>Ecell.Nitp</title>
   </head>
   <body>
