updated index page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.jpg" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Search Console Verification -->
     <meta name="google-site-verification" content="moq_mQuLzWS8EQ6TUooMzyZTaZBes8W2H71lMnfy-_A" />
-    <title>Ecell.Nitp</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Ecell NIT Patna is dedicated to fostering entrepreneurship and innovation. Explore our events, initiatives, and resources to support aspiring entrepreneurs." />
+    <meta name="keywords" content="Ecell NIT Patna, Ecell Nitp, entrepreneurship, innovation, startup support, business development, NIT Patna" />
+    <meta name="author" content="Ecell NIT Patna" />
+
+    <title>Ecell | NIT Patna</title>
   </head>
   <body>
     <div id="root"></div>
